<resources>
    <string name="app_name">Microspot</string>
    <string name="managesamples_title">Samples</string>
    <string name="calibrate_title">Calibrate Sample</string>
    <string name="controlpanel_title">Control Panel</string>
    <string name="scancomplete_title">Scan complete</string>
    <string name="scan_title">Scanning...</string>
    <string name="settings_title">Settings</string>
    <string name="newscan_title">New scan</string>
    <string name="presets_title">Presets</string>
    <string name="newpreset_title">New preset</string>

    <string name="cal_mount">Mount the device on the Microspot, with the camera looking through
    the microscope</string>
    <string name="cal_how">Calibrate the sample, by moving it with the four buttons below, and then
    adjusting the knobs in the carriage until you get a clear image</string>

    <string name="presetname">Preset Name</string>
    <string name="gridhint">Size in um</string>

    <string name="patientid">Patient ID</string>
    <string name="patientanno">Annotations</string>

    <string name="beginscan">Calibrate focus for scan</string>
    <string name="configscan">Config scan grid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="manager_to_new">Make new scan</string>

    <string name="action_settings">Settings</string>
    <string name="presetgridsize">Grid Size</string>

    <string name="temp_directory">/temp</string>
    <string name="temp_info_file">/temp/info.txt</string>
    <string name="temp_scans_folder">/temp/scans/</string>
    <string name="samples_folder">/samples</string>
    <string name="start_serial">Start</string>
    <string name="home_axis">Home Axis</string>
    <string name="x_minus">X-</string>
    <string name="y_plus">Y+</string>
    <string name="x_plus">X+</string>
    <string name="y_minus">Y-</string>
    <string name="stop_serial">Stop</string>
    <string name="interval_x_and_y_in_mm">Enter the interval between shots along X and Y, in mm</string>
    <string name="shots_x_and_y_axis">Enter how many shots do you want along X and Y axis</string>
    <string name="x_axis">X axis</string>
    <string name="y_axis">Y axis</string>
    <string name="gridDefaultsTo">If left blank, these values default to the standard sample scanning grid</string>
    <string name="scan_sample">Scan sample</string>
    <string name="scanning_sample">Scanning sample...</string>
    <string name="do_not_touch">DO NOT TOUCH THE MICROSPOT DEVICE DURING THE SCAN</string>
    <string name="temp_folder">/temp</string>

</resources>
