<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patientid"
        android:id="@+id/idSign"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patientID"
        android:layout_gravity="center_horizontal"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/patientanno"
        android:id="@+id/annoSign" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/annotation"
        android:inputType="text"
        android:layout_weight="20"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configscan"
        android:id="@+id/configscan"
        android:layout_gravity="center_horizontal" />

</LinearLayout>